# FastAPI-Next-todo-

todo-app/: pyproject.toml
todo-app/tests/: test_main.py
todo-app/todo_app/: main.py  setting.py
