[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["KaranSingh52ED <karansingh999703@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlmodel = "^0.0.24"
psycopg = {extras = ["binary"], version = "^3.2.6"}
pytest = "^8.3.5"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
